add header block

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,40 @@
 
 <body>
 
-	<h1>Veggie</h1>
+	<header id="home" class="header">
+
+		<div class="header--wrapper">
+			<nav class="header__menu">
+				<div class="header__item">
+					<a href="#home" class="header__link header__link--active">Home</a>
+				</div>
+				<div class="header__item">
+					<a href="#special" class="header__link">Specials</a>
+				</div>
+				<div class="header__item">
+					<a href="#about" class="header__link">About</a>
+				</div>
+				<div class="header__item">
+					<a href="#menu" class="header__link">Menu</a>
+				</div>
+				<div class="header__item">
+					<a href="#contact" class="header__link">Contact</a>
+				</div>
+			</nav>
+ 			<div class="header__title--wrapper">
+				<h1 class="header__title">Veggies es bonus vobis, proinde vos postulo essum.</h1>
+			</div>
+		</div>
+
+	</header>
+
+
+	<main class="main">
+		
+	</main>
+
+
+	<footer class="footer"></footer>
 
 	<script src="js/scripts.min.js"></script>
 
