add offer block

--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,25 @@
 
 
 	<main class="main">
-		
+		<section class="offer">
+			<div class="offer--wrapper">
+ 				<div class="offer__item">
+					<div class="offer__icon"><img src="../img/offer/noodle.png" alt=""></div>
+					<div class="offer__name">Turnip greens</div>
+					<div class="offer__desc">Lorem ipsum dolor sit amet, consectetur adipisc Pellentesque vel enim a elit viverra elementuma. Aliquam erat volutpat. </div>
+				</div>
+				<div class="offer__item">
+					<div class="offer__icon"><img src="../img/offer/tea.png" alt=""></div>
+					<div class="offer__name">Beetroot water</div>
+					<div class="offer__desc">Lorem ipsum dolor sit amet, consectetur adipisc Pellentesque vel enim a elit viverra elementuma. Aliquam erat volutpat. </div>
+				</div>
+				<div class="offer__item">
+					<div class="offer__icon"><img src="../img/offer/sweet.png" alt=""></div>
+					<div class="offer__name">GET SOCIAL</div>
+					<div class="offer__desc">Lorem ipsum dolor sit amet, consectetur adipisc Pellentesque vel enim a elit viverra elementuma. Aliquam erat volutpat. </div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 
