add specials block

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
 					<a href="#home" class="header__link header__link--active">Home</a>
 				</div>
 				<div class="header__item">
-					<a href="#special" class="header__link">Specials</a>
+					<a href="#specials" class="header__link">Specials</a>
 				</div>
 				<div class="header__item">
 					<a href="#about" class="header__link">About</a>
@@ -69,6 +69,78 @@
 					<div class="offer__icon"><img src="../img/offer/sweet.png" alt=""></div>
 					<div class="offer__name">GET SOCIAL</div>
 					<div class="offer__desc">Lorem ipsum dolor sit amet, consectetur adipisc Pellentesque vel enim a elit viverra elementuma. Aliquam erat volutpat. </div>
+				</div>
+			</div>
+		</section>
+
+		<section id="specials" class="specials">
+			<header>
+				<h1 class="specials__title">This month specials</h1>
+			</header>
+			<div class="specials--wrapper">
+				<div class="specials__row specials__row--odd">
+					<div class="specials__item">
+						<div class="specials__img">
+							<img src="../img/specials/dishes1.jpg" alt="">
+						</div>
+						<div class="specials__info">
+							<div class="specials__name">Greens fava</div>
+							<div class="specials__desc">Lorem ipsum dolor sit Pellentesque vel enim a</div>
+							<div class="specials__price">17$</div>
+						</div>
+					</div>
+					<div class="specials__item">
+						<div class="specials__img">
+							<img src="../img/specials/dishes2.jpg" alt="">
+						</div>
+						<div class="specials__info">
+							<div class="specials__name">Celery quandong</div>
+							<div class="specials__desc">Lorem ipsum dolor sit Pellentesque vel enim a</div>
+							<div class="specials__price">30$</div>
+						</div>
+					</div>
+					<div class="specials__item">
+						<div class="specials__img">
+							<img src="../img/specials/dishes3.jpg" alt="">
+						</div>
+						<div class="specials__info">
+							<div class="specials__name">Pea horseradish</div>
+							<div class="specials__desc">Lorem ipsum dolor sit Pellentesque vel enim a</div>
+							<div class="specials__price">25$</div>
+						</div>
+					</div>
+				</div>
+				<div class="specials__row specials__row--even">
+					<div class="specials__item">
+						<div class="specials__img">
+							<img src="../img/specials/dishes4.jpg" alt="">
+						</div>
+						<div class="specials__info">
+							<div class="specials__name">Soko radicchio</div>
+							<div class="specials__desc">Lorem ipsum dolor sit Pellentesque vel enim a</div>
+							<div class="specials__price">7$</div>
+						</div>
+					</div>
+					<div class="specials__item">
+						<div class="specials__img">
+							<img src="../img/specials/dishes5.jpg" alt="">
+						</div>
+						<div class="specials__info">
+							<div class="specials__name">Tigernut</div>
+							<div class="specials__desc">Lorem ipsum dolor sit Pellentesque vel enim a</div>
+							<div class="specials__price">3$</div>
+						</div>
+					</div>
+					<div class="specials__item">
+						<div class="specials__img">
+							<img src="../img/specials/dishes6.jpg" alt="">
+						</div>
+						<div class="specials__info">
+							<div class="specials__name">Yarrow sweet</div>
+							<div class="specials__desc">Lorem ipsum dolor sit Pellentesque vel enim a</div>
+							<div class="specials__price">5$</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
