add about us block

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
 
 		<section id="specials" class="specials">
 			<header>
-				<h1 class="specials__title">This month specials</h1>
+				<h2 class="specials__title">This month specials</h2>
 			</header>
 			<div class="specials--wrapper">
 				<div class="specials__row specials__row--odd">
@@ -141,6 +141,18 @@
 							<div class="specials__price">5$</div>
 						</div>
 					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="about" class="about">
+			<div class="about--wrapper">
+				<div class="about__info">
+					<header>
+						<h2 class="about__title">About us</h2>
+					</header>
+					<div class="about__text">Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</div>
+					<div class="about__signature"><img src="../img/about/signature.png" alt=""></div>
 				</div>
 			</div>
 		</section>
