add responsive styles

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,11 @@
 					<a href="#contact" class="header__link">Contact</a>
 				</div>
 			</nav>
+			<div class="header__burger">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
  			<div class="header__title--wrapper">
 				<h1 class="header__title">Veggies es bonus vobis, proinde vos postulo essum.</h1>
 			</div>
